--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -9,6 +9,24 @@ services:
     volumes:
       - c:/data/db
 
+  basketdb:
+    container_name: basketdb
+    restart: always
+    ports:
+      - "6379:6379"
+
+  portainer:
+    container_name: portainer
+    restart: always
+    ports:
+      - "8090:8000"
+      - "9081:9000"
+    volumes:
+      - source: '\\.\pipe\docker_engine'
+        target: '\\.\pipe\docker_engine'
+        type: npipe
+      - C:\ProgramData\Portainer:C:\data
+
   catalog.api:
     container_name: catalog.api
     environment:
@@ -18,3 +36,14 @@ services:
       - catalogdb
     ports:
       - "8000:80"
+
+  basket.api:
+    container_name: basket.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "CacheSettings:ConnectionString=basketdb:6379"
+    depends_on:
+      - basketdb
+    ports:
+      - "8001:80"
+
